--- a/src/views/partials/add-info.hbs
+++ b/src/views/partials/add-info.hbs
@@ -3,13 +3,13 @@
   <div class="field is-horizontal">
     <div class="field-body">
       <div class="field">
-        <input class="input" type="text" placeholder="Enter Image" name="image">
+        <input class="input" type="text" placeholder="Enter Category" name="category">
       </div>
       <div class="field">
-        <input class="input" type="text" placeholder="Enter Location" name="location">
+        <input class="input" type="text" placeholder="Enter Description" name="description">
       </div>
       <div class="field">
-        <input class="input" type="text" placeholder="Enter Weather" name="weather">
+        <input class="input" type="text" placeholder="Enter Analytics" name="analytics">
       </div>
     </div>
   </div>
