--- a/src/views/partials/list-infos.hbs
+++ b/src/views/partials/list-infos.hbs
@@ -1,22 +1,22 @@
 <table class="table is-fullwidth">
   <thead>
     <tr>
-      <th>Image</th>
-      <th>Location</th>
-      <th>Weather</th>
+      <th>Category</th>
+      <th>Description</th>
+      <th>Analytics</th>
     </tr>
   </thead>
   <tbody>
     {{#each placemark.infos}}
     <tr>
       <td>
-        {{image}}
+        {{category}}
       </td>
       <td>
-        {{location}}
+        {{description}}
       </td>
       <td>
-        {{weather}}
+        {{analytics}}
       </td>
       <td>
         <a href="/placemark/{{../placemark._id}}/deleteinfo/{{_id}}" class="button">
