tests working, upload image in progress

--- a/src/views/about-view.hbs
+++ b/src/views/about-view.hbs
@@ -5,9 +5,9 @@
     <p class="title ">
       PlaceMark: Add custom Points of Interest</p>
     <p class="box">
-      <i class="fas fa-music fa-10x" style="color:darkorange"></i>
+      <i class="fa-solid fa-location-dot fa-10x" style="color:darkorange"></i>
       <i class="fas fa-plus fa-4x" style="color:deepskyblue"></i>
-      <i class="fas fa-headphones fa-10x" style="color:gold"></i>
+      <i class="fa-solid fa-map fa-10x" style="color:gold"></i>
     </p>
   </div>
 </section>
