--- a/src/views/main.hbs
+++ b/src/views/main.hbs
@@ -2,7 +2,8 @@
 
 <div class="columns is-vcentered ">
   <div class="column has-text-centered">
-    <h> Sign up or Log in... </h>
+    <h1 style="font-size: xx-large; font-family:Verdana, Geneva, Tahoma, sans-serif">Welcome to PlaceMark</h1>
+    <h2 style="font-size: large; font-family:Verdana, Geneva, Tahoma, sans-serif"><b> Please Login or Sign-up to continue </b> </h2>
   </div>
   <div class="column">
     <img src="/images/placemark_logo.jpeg">
