--- a/src/views/partials/placemark-brand.hbs
+++ b/src/views/partials/placemark-brand.hbs
@@ -1,4 +1,6 @@
 <div class="title p-3 is-flex">
-  <i style="font-size: 48px; color: Dodgerblue;" class="fa-solid fa-map-location-dot"></i>
+  <a href="./">
+    <i style="font-size: 48px; color: Dodgerblue;" class="fa-solid fa-map-location-dot"></i>
+  </a>
   <div class="ml-4">PlaceMark</div>
 </div>
