added basic admin view

--- a/src/views/partials/placemark-brand.hbs
+++ b/src/views/partials/placemark-brand.hbs
@@ -1,5 +1,5 @@
 <div class="title p-3 is-flex">
-  <a href="./">
+  <a href=".././about">
     <i style="font-size: 48px; color: Dodgerblue;" class="fa-solid fa-map-location-dot"></i>
   </a>
   <div class="ml-4">PlaceMark</div>
