--- a/src/views/partials/add-info.hbs
+++ b/src/views/partials/add-info.hbs
@@ -11,6 +11,12 @@
       <div class="field">
         <input class="input" type="text" placeholder="Enter Analytics" name="analytics">
       </div>
+      <div class="field">
+        <input class="input" type="float" placeholder="Enter Latitude" name="lat">
+      </div>
+      <div class="field">
+        <input class="input" type="float" placeholder="Enter Longitude" name="lng">
+      </div>
     </div>
   </div>
   <button class="button is-primary">Add Information</button>
