--- a/src/views/partials/list-infos.hbs
+++ b/src/views/partials/list-infos.hbs
@@ -3,7 +3,9 @@
     <tr>
       <th>Category</th>
       <th>Description</th>
-      <th>Analytics</th>
+      <th>Visits</th>
+      <th>Latitude</th>
+      <th>Longitude</th>
     </tr>
   </thead>
   <tbody>
@@ -17,6 +19,12 @@
       </td>
       <td>
         {{analytics}}
+      </td>
+      <td>
+        {{lat}}
+      </td>
+      <td>
+        {{lng}}
       </td>
       <td>
         <a href="/placemark/{{../placemark._id}}/deleteinfo/{{_id}}" class="button">
