--- a/src/views/placemark-view.hbs
+++ b/src/views/placemark-view.hbs
@@ -8,8 +8,7 @@
     {{> list-infos}}
     {{> add-info}}
   </div>
-  <div class="column">
+</section>
+<div class="section">
     {{> placemark-image }}
-  </div>
-</section>
-</section>
+</div>
