--- a/src/views/partials/add-info.hbs
+++ b/src/views/partials/add-info.hbs
@@ -3,6 +3,9 @@
   <div class="field is-horizontal">
     <div class="field-body">
       <div class="field">
+        <input class="input" type="text" placeholder="Enter Name" name="name">
+      </div>
+      <div class="field">
         <input class="input" type="text" placeholder="Enter Category" name="category">
       </div>
       <div class="field">
