--- a/src/views/partials/list-infos.hbs
+++ b/src/views/partials/list-infos.hbs
@@ -1,6 +1,7 @@
 <table class="table is-fullwidth">
   <thead>
     <tr>
+      <th>Name</th>
       <th>Category</th>
       <th>Description</th>
       <th>Visits</th>
@@ -11,6 +12,9 @@
   <tbody>
     {{#each placemark.infos}}
     <tr>
+      <td>
+        {{name}}
+      </td>
       <td>
         {{category}}
       </td>
