added geocode functionality and maps, with error handling

--- a/src/views/partials/add-placemark.hbs
+++ b/src/views/partials/add-placemark.hbs
@@ -3,7 +3,13 @@
   <div class="field is-horizontal">
     <div class="field-body">
       <div class="field">
-        <label class="label">Name</label> <input class="input" type="text" placeholder="PoI Name" name="name">
+        <label class="label">PoI Name</label> <input class="input" type="text" placeholder="PoI Name" name="name">
+      </div>
+      <div class="field">
+        <label class="label">City</label> <input class="input" type="text" placeholder="PoI City" name="city">
+      </div>
+      <div class="field">
+        <label class="label">Country</label> <input class="input" type="text" placeholder="PoI Country" name="country">
       </div>
     </div>
   </div>
