--- a/src/views/partials/menu.hbs
+++ b/src/views/partials/menu.hbs
@@ -10,6 +10,7 @@
         <div class="buttons">
           <a id="about" class="button" href="/about"> About </a>
           <a id="dashboard" class="button" href="/dashboard"> Dashboard </a>
+          <a id="account" class="button" href="/user"> Account </a>
           <a id="logout" class="button" href="/logout"> Logout </a>
         </div>
       </div>
